[tool.poetry]
name = "aircraft-control"
version = "0.1.0"
description = ""
authors = ["Widmark Kauê"]
readme = "README.md"
packages = [{include = "aircraft_control"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
control = "^0.9.4"
pathlib2 = "^2.3.7.post1"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
